바텀 네비게이션 구현

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,10 @@
     <string name="app_name">MuyahoAndroid</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <string name="menu_home">home</string>
+    <string name="menu_calc">calc</string>
+    <string name="menu_board">board</string>
+    <string name="menu_my">my</string>
+
 </resources>
