--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,12 @@
     <string name="menu_board">board</string>
     <string name="menu_my">my</string>
 
+    <!--common-->
+    <string name="percent">%</string>
+
+    <!--home-->
+    <string name="home_last_budget">최종자산</string>
+    <string name="home_korea_money_unit">원</string>
+    <string name="home_today_profit">오늘의 수익률</string>
+
 </resources>
