--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,8 @@
     <string name="home_korea_money_unit">원</string>
     <string name="home_today_profit">오늘의 수익률</string>
 
+    <!--fab-->
+    <string name="fab_sub_modify">기존 종목 정보 수정</string>
+    <string name="fab_sub_new">신규 종목 추가</string>
+
 </resources>
