피드백 반영 1. shape_bg_radius_14dp 생성

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
+    <!--main-->
     <string name="menu_home">home</string>
     <string name="menu_calc">calc</string>
     <string name="menu_board">board</string>
