신규항목추가 fragment 구현 종목 검색하기 fragment 추가 및 연결

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,4 +30,7 @@
     <string name="add_stock_virtual_currency">가상화폐</string>
     <string name="add_stock_search_stock_name">종목이름으로 검색해주세요.</string>
 
+    <!--search_stock-->
+    <string name="add_stock_search_stock">종목 검색하기</string>
+
 </resources>
