--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,5 +32,6 @@
 
     <!--search_stock-->
     <string name="add_stock_search_stock">종목 검색하기</string>
+    <string name="add_stock_search_edit_text_hint">종목 이름, 종목 코드로 검색해 주세요</string>
 
 </resources>
