--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,12 @@
     <!--common-->
     <string name="percent">%</string>
     <string name="stock_name">종목명</string>
+    <string name="average_price">평단가</string>
+    <string name="purchase_price">매수금액</string>
+    <string name="quantity">수량</string>
+    <string name="save">저장하기</string>
+    <string name="won">원화</string>
+    <string name="dollar">달러</string>
 
     <!--home-->
     <string name="home_last_budget">최종자산</string>
@@ -33,5 +39,9 @@
     <!--search_stock-->
     <string name="add_stock_search_stock">종목 검색하기</string>
     <string name="add_stock_search_edit_text_hint">종목 이름, 종목 코드로 검색해 주세요</string>
+    
+    <!--input_stock-->
+    <string name="add_stock_input_stock">신규항목추가</string>
+    <string name="add_stock_inform_input_stock">투자 종목의\n가격과 수량을 알려주세요!</string>
 
 </resources>
