--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,24 +3,31 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
-    <!--main-->
+    <!-- main -->
     <string name="menu_home">home</string>
     <string name="menu_calc">calc</string>
     <string name="menu_board">board</string>
     <string name="menu_my">my</string>
 
-    <!--common-->
+    <!-- common -->
     <string name="percent">%</string>
 
-    <!--home-->
+    <!-- home -->
     <string name="home_last_budget">최종자산</string>
     <string name="home_korea_money_unit">원</string>
     <string name="home_today_profit">오늘의 수익률</string>
 
-    <!--fab-->
+    <!-- fab -->
     <string name="fab_sub_modify">기존 종목 정보 수정</string>
     <string name="fab_sub_new">신규 종목 추가</string>
     <string name="sign_apple">애플 아이디로 계속하기</string>
     <string name="sign_kakao">카카오 계정으로 계속하기</string>
+
+    <!-- Nickname -->
+    <string name="nickname_title">우리 화성🚀갈꺼니까,\n영~차!</string>
+    <string name="nickname_start">시작하기</string>
+    <string name="nickname_duplicate">중복된 닉네임</string>
+    <string name="nickname_input_hint">닉네임 입력</string>
+    <string name="nickname_desc">닉네임을 정해주세요!(최대 5자)</string>
 
 </resources>
