--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,6 +36,15 @@
     <string name="home_today_profit">오늘의 수익률</string>
     <string name="home_look_investment">내 투자 살펴보기</string>
     <string name="home_regist">등록하기</string>
+    
+    <!--home_detail-->
+    <string name="home_detail_now_budget">현재 국내 자산(원)</string>
+    <string name="home_detail_now_price">현재가</string>
+    <string name="home_detail_average_price">평단가</string>
+    <string name="home_detail_stock_count">보유량</string>
+    <string name="home_detail_average_price_bitcoin">매수평균가</string>
+    <string name="home_detail_modify">수정하기</string>
+    <string name="home_detail_delete">삭제하기</string>
 
     <!-- fab -->
     <string name="fab_sub_modify">기존 종목 정보 수정</string>
