--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -73,5 +73,6 @@
     <string name="income_rate_desc">+1000%까지 입력 가능해요</string>
     <string name="income_rate_target_income_rate_percent">목표 수익률 (%)</string>
     <string name="income_rate_share">공유하기</string>
+    <string name="mypage_logout">로그아웃</string>
 
 </resources>
