--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -97,5 +97,6 @@
     <string name="mypage_title">%s님,\n환영합니다!</string>
     <string name="mypage_logout">로그아웃</string>
     <string name="mypage_leave">회원탈퇴</string>
+    <string name="water_title">미래의 평단가를\n예상해보세요!</string>
 
 </resources>
